--- a/style.css
+++ b/style.css
@@ -2,19 +2,24 @@
 	padding: 0;
 	margin:0;
 	box-sizing: border-box;
+	text-decoration: none;
 }
 
 body{
 	display: flex;
 }
+.containercontent{
+	width: 100%;
+	height: 100vh;
+}
 .containerMenu{
 	width: 40%;	
-	background-color: /*black*/;
+	/*background-color: black;*/
 }
 .containerMenu__block{
-	position: fixed;
-	width: 100%;
 	height: 70vh;
+	position: fixed;
+	top: 70px;
 }
 .containerMenu__blockimage{
 	width: 280px;
@@ -30,17 +35,16 @@ body{
 	padding-left: 8vh;
 }
 .containerMenu__blockparagrafo{
-
+	font-size: 1.3em;	
 }
 .containerHeader{
 	width: 100%;
 	height: 90vh;
 	display: flex;
-	align-items: center;
+	flex-direction: column;
 	padding-top: 20vh;
 	background-image: url(assets/fundo.png);
-	background-size: cover;	
-	background-repeat: no-repeat;
+	background-size: contain;	
 }
 .containerHeader__block{
 	width: 55vh;
@@ -51,17 +55,16 @@ body{
 	text-align: left;
 }
 .containerImagesPrincipal{
-	width: 100%;
-	background-color: white;
+	width: 70vw;
+	height: 35vh;
 	display: flex;
-	padding-bottom: 80px;
-}
-.containerImagesPrincipal__block{
-	width: 100vh;
-	display: flex;
-	justify-content:space-between;
 	position: relative;
+	top: 37vh;
+	right: 20px;
 }
+/*.containerImagesPrincipal__block{
+/*	padding-right: 10px;*/	
+}*/
 @media(max-width:768px){
 	.containerImagesPrincipal__block{
 		width:36%;
@@ -100,7 +103,8 @@ body{
 	width:100%;
 	display: flex;
 	flex-direction:column;
-	padding-left: 12vh;
+	padding-left: 8vh;
+	padding-top: 35vh;
 }
 .containerfirstmainBlocktitle{
 /*	line-height: 200%;*/
@@ -159,7 +163,7 @@ body{
     margin-top: 4%;
 }
 .containersecondmainBlock{
-	width: 75%;
+	width: 100%;
     height: 49vh;
     display: flex;
     justify-content: space-between;
