--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header{
 .containerMenu__block{
 	width: 20%
 	height: 20vh;
-	background-color: black;
+	/*background-color: black;*/
 	position: fixed;
 	top: 120px;
 }
@@ -216,7 +216,7 @@ header{
 		width: 89%;
 	}
 }
-@media(max-width:752px){
+@media(max-width:768px){
 	.containersecondmainBlock{
 		width: 100%;
     	align-items: center;
@@ -361,4 +361,110 @@ header{
 .containerParceiros__image{
 	width: 100px;
 	height: 100px;
+}
+.containerfooter{
+	width:100%;
+	display:flex;
+	align-items:flex-end;
+	flex-direction:column;
+}
+.containerfooter__section{
+	width: 75%;
+	height:50vh;
+	display:flex;	 
+	background-color:#00C733; 
+}
+.containerfooter__block{
+	width: 100%;
+	display:flex;	
+	justify-content:space-around;
+	align-items:center;
+	justify-content: center;
+	position:relative;
+	top: 40px;
+}
+.containerfooter__blockcontatos{
+	width: 30vw;
+	height:40vh;
+	background-color: /*black*/;
+	display:flex;
+	flex-direction:column;
+}
+.containerfooter__h1{	
+	font-size:25px;
+	color:yellow;
+	font-family:KorolevHeavy;
+}
+.endereco{
+	width:200px;
+}
+ .paragrafo {
+ 	color:white;
+ 	padding-top:3vh;
+ 	font-size:15px;
+ 	font-family: 'KorolevMedium';
+ }
+.paragrafoo{
+	color: white;
+	font-family: 'KorolevMedium';
+}
+.containerfooter__div{
+	width:30%;
+	height:50vh;
+	display:flex;
+	justify-content:
+}
+.containerfooter__divimagemcriança{
+	width:330px;
+	height:220px;
+	border-radius:7%;
+	margin-top: 6px;
+}
+.containerfooter__divimg{
+	width: 350px;
+	height: 230px;
+	display:flex;
+	justify-content:center;
+	margin-top: -65px;
+	border-radius:7%;
+	background-color:white;
+} 
+.imgfootervnw{
+	width: 50px;
+	height: 40px;
+	padding: 5px;
+}
+.divimgfootervnw{
+	width:100%;
+	height:10vh;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+}
+.footerp{
+	font-size:10px;
+}
+@media (max-width: 768px){
+	.containerfooter__section{
+		width: 100%;
+	}
+	.containerfooter__block{
+		flex-wrap: wrap-reverse;
+	}	
+	.containerfooter__divimagemcriança{
+		width: 330px;
+		height: 215px;
+	}
+}
+@media (max-width: 604px){
+
+}
+@media (max-width: 500px){
+	.containerfooter__section{
+		width: 100%;
+		height: 600px;
+	}
+	.containerfooter__block{
+		flex-wrap: wrap-reverse;
+	}
 }
